--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "global": "^4.4.0",
+    "prettier": "^2.7.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
